src/objects/Github_Repositories__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping of Github repositories to product tags in Agile Accelerator</description>
    <fields>
        <fullName>Github_Repository_Id__c</fullName>
        <description>repository.id</description>
        <label>Github Repository Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
      <fullName>Token__c</fullName>
      <description>Auth token for this repository</description>
      <inlineHelpText>Authorization token used for Lurch to post back to comment or issues when synced with Agile Accelerator.</inlineHelpText>
      <label>Authorization Token</label>
      <length>255</length>
      <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Tag__c</fullName>
        <description>The Id of the corresponding Product Tag in Agile Accelerator.</description>
        <inlineHelpText>The Id of the corresponding Product Tag in Agile Accelerator.</inlineHelpText>
        <label>Product Tag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Github Repositories</label>
</CustomObject>